--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- KONFIGURASI -->
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyRY1xfx6clswX_hf0dgN0YqABBwK5H0PPYe2M8VbwQRe7IgK7jgBmq7lJORrIGeLgE7A/exec"; 
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxXUH4NH9gWirQT2GHqFVrzBvPsZfTkaJOjOuqGGUu4_S76GW4uft02EVbqkaW6HhUZFA/exec"; 
         
         // Database lokal sederhana untuk simulasi pengecekan duplikat Kartu Keluarga
 
@@ -118,7 +118,7 @@
                 <form id="form-pendaftaran" class="p-8 space-y-5">
                     <!-- Kelurahan -->
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Kelurahan sesuai KK</label>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Kelurahan</label>
                         <input type="text" name="kelurahan" id="input-kelurahan" required
                             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition" 
                             placeholder="Contoh : Petojo Utara">
