--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             box-shadow: 0 0 0 2px rgba(239, 68, 68, 0.2) !important;
         }
 
-        @keyframes fadeIn {
+        @keyframes fadeScale {
         from { opacity: 0; transform: scale(0.95); }
         to   { opacity: 1; transform: scale(1); }
         }
@@ -55,9 +55,90 @@
 </head>
 <body class="min-h-screen bg-slate-50 font-sans text-gray-800">
 
+<!-- COVER OPERASIONAL -->
+<div id="operasional-cover"
+     class="fixed inset-0 z-[999] hidden flex items-center justify-center">
+
+  <!-- Background Gradient -->
+  <div class="absolute inset-0 bg-gradient-to-br from-pink-500 via-fuchsia-600 to-purple-700"></div>
+
+  <!-- Content Card -->
+  <div class="relative z-10 bg-white text-gray-800 
+              rounded-3xl shadow-2xl 
+              w-[92%] max-w-md 
+              p-8 md:p-10 
+              text-center 
+              animate-fadeIn">
+
+    <!-- Logo Container Putih -->
+    <div class="bg-white rounded-2xl shadow-md p-4 inline-block mb-6">
+      <img src="logo-rptra.png"
+           alt="Logo RPTRA"
+           class="h-16 mx-auto"
+           onerror="this.style.display='none'">
+    </div>
+
+    <!-- Judul -->
+    <h1 class="text-xl md:text-2xl font-bold mb-4">
+      Program Pangan Bersubsidi
+    </h1>
+
+    <!-- Info Tanggal -->
+    <p class="text-sm text-gray-600 mb-2">
+      Pendaftaran di buka pada tanggal :
+    </p>
+
+    <p id="cover-tanggal"
+       class="text-lg font-semibold text-purple-700 mb-4">
+    </p>
+
+    <!-- Premium Jam Operasional -->
+<div class="bg-gradient-to-r from-purple-50 to-pink-50 
+            rounded-2xl p-5 mb-6 border border-purple-100 shadow-sm">
+
+  <!-- Header -->
+  <div class="flex items-center justify-center gap-2 mb-4">
+    <div class="bg-purple-100 p-2 rounded-full">
+      <i data-lucide="clock" class="w-5 h-5 text-purple-600"></i>
+    </div>
+    <h3 class="text-sm font-semibold text-purple-700 tracking-wide">
+      Jam Operasional
+    </h3>
+  </div>
+
+  <!-- Divider -->
+  <div class="border-t border-purple-200 mb-4"></div>
+
+  <!-- Jam Detail -->
+  <div class="space-y-3 text-sm">
+
+    <div class="flex justify-between items-center">
+      <span class="text-gray-600">Buka</span>
+      <span id="cover-jam-buka"
+            class="font-bold text-purple-700"></span>
+    </div>
+
+    <div class="flex justify-between items-center">
+      <span class="text-gray-600">Tutup</span>
+      <span id="cover-jam-tutup"
+            class="font-bold text-purple-700"></span>
+    </div>
+
+  </div>
+</div>
+
+
+    <!-- Pesan -->
+    <p class="text-sm text-gray-500">
+      Silahkan kembali saat jam operasional di buka.
+    </p>
+
+  </div>
+</div>
+
     <!-- KONFIGURASI -->
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxoIBnTyeMywY9pejDy7CwLr79HZwHlNRIh76MXjoPev0mu_vRr0DuBU_6Vq5eY94E3Vg/exec"; 
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyccGXCSO4NaJP3bFyNmWjdld45Sak0s_p1OYuWq06SqLLXWBtvnBC5xOC7073AxbDT/exec"; 
         
         // Database lokal sederhana untuk simulasi pengecekan duplikat Kartu Keluarga
 
@@ -118,7 +199,7 @@
                 <form id="form-pendaftaran" class="p-8 space-y-5">
                     <!-- Kelurahan -->
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Kelurahan</label>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Kelurahan sesuai Kartu Keluarga</label>
                         <input type="text" name="kelurahan" id="input-kelurahan" required
                             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition" 
                             placeholder="Contoh : Petojo Utara">
@@ -129,7 +210,7 @@
                         <label class="block text-sm font-medium text-gray-700 mb-1">No. Kartu Keluarga (16 Digit)</label>
                         <input type="text" name="kk" id="input-kk" maxlength="16" required
                             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                            placeholder="317...">
+                            placeholder="Masukkan No. KK Anda">
                         <p id="error-kk" class="hidden text-red-600 text-xs mt-1 font-medium">No. Kartu Keluarga sudah ada</p>
                     </div>
 
@@ -145,7 +226,7 @@
                             <label class="block text-sm font-medium text-gray-700 mb-1">No. KTP (16 Digit)</label>
                             <input type="text" name="ktp" id="input-ktp" maxlength="16" required
                                 class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                                placeholder="0000...">
+                                placeholder="Masukkan No. KTP Anda">
                         </div>
                     </div>
 
@@ -161,7 +242,7 @@
                             <label class="block text-sm font-medium text-gray-700 mb-1">No. Kartu ATM (16 Digit)</label>
                             <input type="text" name="atm" id="input-atm" maxlength="16" required
                                 class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                                placeholder="0000...">
+                                placeholder="Masukkan No. Kartu ATM Anda">
                         </div>
                     </div>
 
@@ -176,6 +257,7 @@
                                 <option value="Kartu Disabilitas">Kartu Disabilitas</option>
                                 <option value="Dasawisma">Dasawisma</option>
                                 <option value="KAJ">KAJ</option>
+                                <option value="Kartu Pekerja">Kartu Pekerja</option>
                             </select>
                         </div>
                         
@@ -183,23 +265,23 @@
                             <label class="block text-sm font-medium text-gray-700 mb-2">Jenis Komoditas :</label>
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 bg-gray-50 p-4 rounded-xl border border-gray-200">
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Ayam - 1 ekor" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Ayam" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Ayam - 1 ekor</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Daging Sapi - 1 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Daging Sapi" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Daging Sapi - 1 kg</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Telur - 1 tray" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Telur" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Telur - 1 tray</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Beras - 5 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Beras" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Beras - 5 kg</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Ikan Kembung - 1 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Ikan Kembung" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Ikan Kembung - 1 kg</span>
                                 </label>
                                 <label id="container-susu" class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
@@ -264,6 +346,17 @@
                     <div class="flex justify-between">
                         <span class="text-gray-500">Komoditas</span>
                         <span id="review-produk" class="font-medium text-blue-600 text-right max-w-[60%]"></span>
+                    </div>
+                    <!-- LOKASI -->
+                    <div>
+                    <p class="text-gray-500 text-xs mb-1">Lokasi</p>
+                    <p class="font-medium text-gray-800">RPTRA Kenanga Cideng
+                    </p>
+                    <p class="text-gray-600 text-xs leading-relaxed">
+                    Jl. Makian No. 1 RT. 002 RW. 005<br>
+                    Kelurahan Cideng – Kecamatan Gambir<br>
+                    Jakarta Pusat
+                    </p>
                     </div>
                     <div class="flex justify-between">
                         <span class="text-gray-500">Status</span>
@@ -355,6 +448,7 @@
         return;
     }
 
+    toggleLoading(true, 'btn-submit');
     showGlobalLoading(true);
 
     try {
@@ -372,7 +466,7 @@
             return;
         }
 
-        registeredData = { ...payload, id: result.id };
+        registeredData = { ...payload, id: result.id, waktu: result.waktu};
         renderReview();
         switchView('review');
         showToast('Pendaftaran berhasil !');
@@ -466,6 +560,73 @@ function getWaktuOperasionalText() {
 
   </div>
 </div>
+
+<script>
+// ================================
+// KONFIGURASI JADWAL (SAMA DENGAN APPS SCRIPT)
+// ================================
+const OPERASIONAL_TAHUN  = 2026;
+const OPERASIONAL_BULAN  = 2;  // Februari
+const OPERASIONAL_TANGGAL = 19;
+
+const JAM_BUKA  = 8;   // 08.00 WIB
+const JAM_TUTUP = 23;  // 23.00 WIB
+
+
+function cekJamOperasional() {
+
+  const now = new Date();
+  const wib = new Date(
+    now.toLocaleString('en-US', { timeZone: 'Asia/Jakarta' })
+  );
+
+  const tahun = wib.getFullYear();
+  const bulan = wib.getMonth() + 1;
+  const tanggal = wib.getDate();
+  const jam = wib.getHours();
+  const menit = wib.getMinutes();
+  const totalMenit = jam * 60 + menit;
+
+  const tanggalSesuai =
+    tahun === OPERASIONAL_TAHUN &&
+    bulan === OPERASIONAL_BULAN &&
+    tanggal === OPERASIONAL_TANGGAL;
+
+  const jamSesuai =
+    totalMenit >= JAM_BUKA * 60 &&
+    totalMenit <= JAM_TUTUP * 60;
+
+  const cover = document.getElementById('operasional-cover');
+
+  // Isi informasi tanggal & jam
+  const namaBulan = [
+    'Januari','Februari','Maret','April','Mei','Juni',
+    'Juli','Agustus','September','Oktober','November','Desember'
+  ];
+
+  document.getElementById('cover-tanggal').textContent =
+    `${OPERASIONAL_TANGGAL} ${namaBulan[OPERASIONAL_BULAN - 1]} ${OPERASIONAL_TAHUN}`;
+
+  document.getElementById('cover-jam-buka').textContent =
+    JAM_BUKA.toString().padStart(2,'0') + '.00 WIB';
+
+  document.getElementById('cover-jam-tutup').textContent =
+    JAM_TUTUP.toString().padStart(2,'0') + '.00 WIB';
+
+
+  if (tanggalSesuai && jamSesuai) {
+    // ✅ BUKA → Cover hilang
+    cover.classList.add('hidden');
+  } else {
+    // ❌ TUTUP → Cover muncul
+    cover.classList.remove('hidden');
+    cover.classList.add('flex');
+  }
+}
+
+// Jalankan saat halaman load
+document.addEventListener('DOMContentLoaded', cekJamOperasional);
+</script>
 
 </body>
 </html>
