--- a/verifikasi.html
+++ b/verifikasi.html
@@ -2,126 +2,58 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Verifikasi Pendaftaran</title>
+  <title>Verifikasi Pesanan</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <style>
-    .neon-green {
-      background: #00ff88;
-      box-shadow:
-        0 0 5px #00ff88,
-        0 0 10px #00ff88,
-        0 0 20px #00ff88;
-    }
-
-    .popup-success {
-      animation: fadeScale 0.3s ease-out;
-    }
-
-    @keyframes fadeScale {
-      from { opacity: 0; transform: scale(0.8); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-6">
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
 
-  <div class="max-w-md w-full bg-white p-6 rounded-2xl shadow-xl">
-    <h1 class="text-xl font-bold mb-4 text-center">
-      Verifikasi Pendaftaran
-    </h1>
+<div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-md text-center">
+  <h1 class="text-xl font-bold mb-4">Verifikasi Pesanan</h1>
 
-    <div id="status" class="text-gray-600 text-center">
-      Memuat data...
-    </div>
+  <div id="loading" class="text-gray-500">Memuat data...</div>
 
-    <div id="data" class="hidden mt-4 space-y-2 text-sm">
-      <p><b>ID:</b> <span id="v-id"></span></p>
-      <p><b>Nama:</b> <span id="v-nama"></span></p>
-      <p><b>Kelurahan:</b> <span id="v-kelurahan"></span></p>
-      <p><b>Produk:</b> <span id="v-produk"></span></p>
-      <p><b>Waktu:</b> <span id="v-waktu"></span></p>
-
-      <button id="btn-approve"
-        class="w-full mt-6 py-3 rounded-xl font-bold text-black neon-green transition active:scale-95">
-        ✔ Setujui
-      </button>
-    </div>
+  <div id="result" class="hidden space-y-2 text-sm mt-4">
+    <p><strong>ID:</strong> <span id="v-id"></span></p>
+    <p><strong>Nama:</strong> <span id="v-nama"></span></p>
+    <p><strong>KK:</strong> <span id="v-kk"></span></p>
+    <p><strong>Komoditas:</strong> <span id="v-produk"></span></p>
   </div>
 
-  <!-- NOTIFIKASI -->
-  <div id="popup"
-    class="fixed inset-0 hidden items-center justify-center bg-black/40">
-    <div class="bg-white px-8 py-6 rounded-2xl shadow-2xl popup-success text-center">
-      <h2 class="text-lg font-bold text-green-600">
-        Berhasil Disetujui
-      </h2>
-    </div>
-  </div>
+</div>
 
 <script>
-const params = new URLSearchParams(window.location.search);
-const id = params.get('id');
-const API_URL = "https://script.google.com/macros/s/AKfycbzT46JHRpENP03zyqQ3U579vLq9_neVCt4wf06NLvckTDz3u6xc9Xp59kXE1G4LCCcxWA/exec";
+const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzT46JHRpENP03zyqQ3U579vLq9_neVCt4wf06NLvckTDz3u6xc9Xp59kXE1G4LCCcxWA/exec";
 
-if (!id) {
-  document.getElementById('status').textContent = 'ID tidak ditemukan';
-} else {
-
-  fetch(`${API_URL}?id=${encodeURIComponent(id)}`)
-    .then(res => res.json())
-    .then(data => {
-
-      if (!data.success) {
-        document.getElementById('status').textContent = 'Data tidak valid';
-        return;
-      }
-
-      document.getElementById('status').classList.add('hidden');
-      document.getElementById('data').classList.remove('hidden');
-
-      document.getElementById('v-id').textContent = data.id;
-      document.getElementById('v-nama').textContent = data.nama;
-      document.getElementById('v-kelurahan').textContent = data.kelurahan;
-      document.getElementById('v-produk').textContent = data.produk;
-      document.getElementById('v-waktu').textContent = data.waktu;
-
-      document.getElementById('btn-approve').addEventListener('click', () => {
-        approveData(data.id);
-      });
-
-    });
+function getParam(name) {
+  const urlParams = new URLSearchParams(window.location.search);
+  return urlParams.get(name);
 }
 
-function approveData(id) {
+async function loadData() {
+  const id = getParam('id');
+  if(!id) {
+    document.getElementById('loading').innerText = "ID tidak ditemukan";
+    return;
+  }
 
-  fetch(API_URL, {
-    method: "POST",
-    body: JSON.stringify({
-      action: "approve",
-      id: id
-    })
-  })
-  .then(res => res.json())
-  .then(result => {
+  try {
+    const res = await fetch(GOOGLE_SCRIPT_URL + "?action=getById&id=" + id);
+    const data = await res.json();
 
-    if (result.success) {
+    document.getElementById('loading').classList.add('hidden');
+    document.getElementById('result').classList.remove('hidden');
 
-      const popup = document.getElementById('popup');
-      popup.classList.remove('hidden');
-      popup.classList.add('flex');
+    document.getElementById('v-id').innerText = data.id;
+    document.getElementById('v-nama').innerText = data.nama_pemilik;
+    document.getElementById('v-kk').innerText = data.kk;
+    document.getElementById('v-produk').innerText = data.produk;
 
-      setTimeout(() => {
-        popup.classList.add('hidden');
-        popup.classList.remove('flex');
-      }, 2000);
-
-    } else {
-      alert("Gagal menyetujui data");
-    }
-
-  });
+  } catch(e) {
+    document.getElementById('loading').innerText = "Gagal mengambil data";
+  }
 }
+
+loadData();
 </script>
 
 </body>
