--- a/index.html
+++ b/index.html
@@ -63,22 +63,24 @@
                             <input type="text" id="kelurahan" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama kelurahan">
                         </div>
 
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <!-- No KK (Dipindahkan ke bawah Kelurahan) -->
+                        <div>
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (16 Digit)</label>
+                            <input type="number" id="no_kk" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                        </div>
+
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 border-t pt-4">
                             <!-- NIK -->
                             <div>
                                 <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">NIK (16 Digit)</label>
                                 <input type="number" id="nik" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
                             </div>
-                            <!-- No KK -->
-                            <div>
-                                <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (16 Digit)</label>
-                                <input type="number" id="no_kk" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
-                            </div>
-                        </div>
 
-                        <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Nama Lengkap Sesuai KTP</label>
-                            <input type="text" id="nama" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama lengkap">
+                            <!-- Nama Lengkap Sesuai KTP -->
+                            <div>
+                                <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Nama Lengkap Sesuai KTP</label>
+                                <input type="text" id="nama" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama lengkap">
+                            </div>
                         </div>
                     </div>
 
