--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <!-- Kategori Penerima -->
                         <div>
                             <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Kategori Penerima</label>
-                            <select id="kategori_penerima" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none bg-white">
+                            <select id="kategori_penerima" onchange="renderProduk()" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none bg-white">
                                 <option value="" disabled selected>Pilih Kategori</option>
                                 <option value="KJP">KJP (Kartu Jakarta Pintar)</option>
                                 <option value="PJLP">PJLP (Penyedia Jasa Lainnya Perorangan)</option>
@@ -272,8 +272,15 @@
 
         function renderProduk() {
             const container = document.getElementById('container-produk');
+            const kategoriPenerima = document.getElementById('kategori_penerima').value;
             container.innerHTML = '';
+            
             KOMODITAS_LIST.forEach(item => {
+                // Logika: Sembunyikan Susu UHT jika kategori bukan KJP
+                if (item.id === 'susu' && kategoriPenerima !== 'KJP') {
+                    return;
+                }
+
                 const div = document.createElement('div');
                 div.className = `border-2 border-gray-100 rounded-xl p-4 flex items-center gap-4 transition bg-white hover:border-blue-400 cursor-pointer group`;
                 div.innerHTML = `
@@ -347,6 +354,7 @@
             document.getElementById('form-pendaftaran').reset();
             document.getElementById('view-tiket').classList.add('hidden');
             document.getElementById('view-form').classList.remove('hidden');
+            renderProduk(); // Reset daftar produk ke kondisi awal
             if (window.lucide) lucide.createIcons();
         }
 
