--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
         }
-        /* Animasi Scale untuk Notifikasi Tengah */
         .scale-in {
             animation: scaleIn 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
@@ -28,7 +27,6 @@
             from { opacity: 0; transform: scale(0.9) translateY(20px); }
             to { opacity: 1; transform: scale(1) translateY(0); }
         }
-        /* Menghilangkan spin button pada input number */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -65,10 +63,13 @@
                             <i data-lucide="user" class="w-4 h-4"></i> Informasi Identitas
                         </h2>
                         
-                        <!-- Kelurahan -->
+                        <!-- Kelurahan (Hanya Huruf) -->
                         <div>
                             <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Kelurahan Sesuai KK</label>
-                            <input type="text" id="kelurahan" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama kelurahan">
+                            <input type="text" id="kelurahan" required 
+                                oninput="validateLetters(this)"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" 
+                                placeholder="Masukkan nama kelurahan (Hanya huruf)">
                         </div>
 
                         <!-- No KK -->
@@ -77,10 +78,13 @@
                             <input type="number" id="no_kk" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
                         </div>
 
-                        <!-- Nama Pengisi Form -->
+                        <!-- Nama Pengisi Form (Hanya Huruf) -->
                         <div>
                             <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Nama Pengisi Form</label>
-                            <input type="text" id="nama_pengisi" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama pengisi formulir">
+                            <input type="text" id="nama_pengisi" required 
+                                oninput="validateLetters(this)"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" 
+                                placeholder="Masukkan nama lengkap (Hanya huruf)">
                         </div>
 
                         <!-- No. KTP -->
@@ -89,10 +93,13 @@
                             <input type="number" id="nik" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
                         </div>
 
-                        <!-- Nama Pemilik Kartu ATM -->
+                        <!-- Nama Pemilik Kartu ATM (Hanya Huruf) -->
                         <div>
                             <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Nama Pemilik Kartu ATM</label>
-                            <input type="text" id="nama" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" placeholder="Masukkan nama pemilik kartu ATM">
+                            <input type="text" id="nama" required 
+                                oninput="validateLetters(this)"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none" 
+                                placeholder="Sesuai nama di kartu (Hanya huruf)">
                         </div>
 
                         <!-- No. Kartu ATM -->
@@ -243,7 +250,7 @@
             </div>
         </div>
 
-        <!-- NOTIFIKASI ERROR -->
+        <!-- MODAL ERROR -->
         <div id="modal-error" class="hidden fixed inset-0 bg-black/40 z-[60] flex items-center justify-center p-4 backdrop-blur-sm">
             <div class="bg-white rounded-2xl p-6 max-w-xs w-full text-center shadow-2xl scale-in border-t-4 border-red-500">
                 <div class="w-16 h-16 bg-red-100 text-red-600 rounded-full flex items-center justify-center mx-auto mb-4">
@@ -288,7 +295,11 @@
     </main>
 
     <script>
-        // Daftar komoditas
+        // Fungsi Validasi: Menghapus selain huruf dan spasi
+        function validateLetters(input) {
+            input.value = input.value.replace(/[^a-zA-Z\s]/g, '');
+        }
+
         const KOMODITAS_LIST = [
             { id: 'ayam', nama: 'Ayam 1 ekor', harga: 'Rp 8.000' },
             { id: 'daging', nama: 'Daging Sapi 1Kg', harga: 'Rp 35.000' },
@@ -398,7 +409,6 @@
             document.getElementById('tiket-nik').textContent = nik;
             document.getElementById('tiket-waktu').textContent = waktuSekarang;
 
-            // Render daftar produk di tiket
             const prodList = document.getElementById('tiket-produk-list');
             prodList.innerHTML = '';
             prod.forEach(p => {
