--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
         <!-- VIEW: PENDAFTARAN -->
         <div id="view-form" class="fade-in">
+            <!-- LOGO RPTRA POSITION -->
+            <div class="flex justify-center mb-6">
+                <img src="logo-rptra.png" alt="Logo RPTRA" class="h-24 w-auto object-contain" onerror="this.style.display='none'; console.warn('logo-rptra.png tidak ditemukan');">
+            </div>
+
             <div class="bg-white rounded-2xl shadow-sm border border-gray-200 p-6 md:p-8">
                 <div class="text-center mb-8">
                     <h1 class="text-2xl font-bold text-gray-900">Formulir Pendaftaran</h1>
