--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 <body class="bg-gray-50 min-h-screen font-sans text-gray-800">
 
     <nav class="bg-white shadow-md border-b-4 border-blue-600 sticky top-0 z-50">
-        <div class="max-w-4xl mx-auto px-4 py-4 flex flex-col items-center gap-2">
-            <!-- LOGO RPTRA -->
-            <div class="h-16 flex items-center justify-center">
-                <img src="logo-rptra.png" alt="Logo RPTRA" class="h-full w-auto object-contain" onerror="this.src='https://placehold.co/200x80/f3f4f6/3b82f6?text=LOGO+RPTRA';">
+        <div class="max-w-4xl mx-auto px-4 py-3 flex flex-col items-center gap-1">
+            <!-- LOGO RPTRA - Ukuran diperkecil dari h-16 ke h-10 -->
+            <div class="h-10 flex items-center justify-center">
+                <img src="logo-rptra.png" alt="Logo RPTRA" class="h-full w-auto object-contain" onerror="this.src='https://placehold.co/120x40/f3f4f6/3b82f6?text=LOGO+RPTRA';">
             </div>
             
             <div class="flex flex-col items-center text-center">
-                <span class="font-extrabold text-2xl tracking-tight text-blue-900 leading-tight">Sistem PPB Terpadu</span>
-                <span class="text-xs font-bold text-gray-500 uppercase tracking-widest">RPTRA Melati Duri Pulo</span>
+                <span class="font-extrabold text-xl tracking-tight text-blue-900 leading-tight">Sistem PPB Terpadu</span>
+                <span class="text-[10px] font-bold text-gray-500 uppercase tracking-widest">RPTRA Melati Duri Pulo</span>
             </div>
         </div>
     </nav>
@@ -150,7 +150,8 @@
         <div id="view-tiket" class="hidden fade-in max-w-md mx-auto">
             <div class="bg-white rounded-2xl shadow-xl border border-gray-200 overflow-hidden">
                 <div class="bg-gray-50 p-6 text-center border-b">
-                    <img src="logo-rptra.png" alt="Logo RPTRA" class="h-12 w-auto mx-auto mb-2" onerror="this.src='https://placehold.co/100x40/f3f4f6/3b82f6?text=RPTRA';">
+                    <!-- Ukuran logo diperkecil dari h-12 ke h-8 -->
+                    <img src="logo-rptra.png" alt="Logo RPTRA" class="h-8 w-auto mx-auto mb-2" onerror="this.src='https://placehold.co/80x30/f3f4f6/3b82f6?text=RPTRA';">
                     <h2 class="text-xl font-extrabold text-blue-900">Bukti Pendaftaran</h2>
                     <p class="text-[10px] text-gray-500 uppercase tracking-widest font-bold">RPTRA Melati Duri Pulo</p>
                 </div>
@@ -182,7 +183,8 @@
         <div id="view-verifikasi" class="hidden fade-in max-w-md mx-auto">
             <div class="bg-white rounded-2xl shadow-2xl border border-gray-200 p-6">
                 <h1 class="text-lg font-bold mb-6 text-center text-gray-800 flex flex-col items-center gap-2">
-                    <img src="logo-rptra.png" alt="Logo RPTRA" class="h-12 w-auto mb-1" onerror="this.src='https://placehold.co/100x40/f3f4f6/3b82f6?text=RPTRA';">
+                    <!-- Ukuran logo diperkecil dari h-12 ke h-8 -->
+                    <img src="logo-rptra.png" alt="Logo RPTRA" class="h-8 w-auto mb-1" onerror="this.src='https://placehold.co/80x30/f3f4f6/3b82f6?text=RPTRA';">
                     <span class="text-blue-900">Verifikasi Pengambilan</span>
                 </h1>
 
