--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         </div>
 
                         <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (16 Digit)</label>
-                            <input type="number" id="no_kk" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (Harus 16 Digit)</label>
+                            <input type="number" id="no_kk" required oninput="limitDigits(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
                         </div>
 
                         <div>
@@ -73,8 +73,8 @@
                         </div>
 
                         <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. KTP (16 Digit)</label>
-                            <input type="number" id="nik" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. KTP (Harus 16 Digit)</label>
+                            <input type="number" id="nik" required oninput="limitDigits(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
                         </div>
 
                         <div>
@@ -83,8 +83,8 @@
                         </div>
 
                         <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu ATM (16 Digit)</label>
-                            <input type="number" id="no_atm" required oninput="javascript: if (this.value.length > 16) this.value = this.value.slice(0, 16);" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="6013XXXXXXXXXXXX">
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu ATM (16 atau 18 Digit)</label>
+                            <input type="number" id="no_atm" required oninput="limitDigits(this, 18)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="6013XXXXXXXXXXXX">
                         </div>
 
                         <div>
@@ -212,6 +212,12 @@
             input.value = input.value.replace(/[^a-zA-Z\s]/g, '');
         }
 
+        function limitDigits(input, max) {
+            if (input.value.length > max) {
+                input.value = input.value.slice(0, max);
+            }
+        }
+
         const KOMODITAS_LIST = [
             { id: 'ayam', nama: 'Ayam 1 ekor', harga: 'Rp 8.000' },
             { id: 'daging', nama: 'Daging Sapi 1Kg', harga: 'Rp 35.000' },
@@ -282,6 +288,12 @@
             const no_atm = document.getElementById('no_atm').value;
             const kategori = document.getElementById('kategori_penerima').value;
             const nama_pengisi = document.getElementById('nama_pengisi').value;
+            
+            // Validasi Digit
+            if (nik.length !== 16) return alert("No. KTP harus 16 digit.");
+            if (no_kk.length !== 16) return alert("No. Kartu Keluarga harus 16 digit.");
+            if (no_atm.length !== 16 && no_atm.length !== 18) return alert("No. Kartu ATM harus 16 atau 18 digit.");
+
             const prod = Array.from(document.querySelectorAll('input[name="produk"]:checked')).map(c => {
                 return KOMODITAS_LIST.find(k => k.id === c.value).nama;
             });
